--- a/views/index.html
+++ b/views/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.2/react.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.2/react-dom.js"></script>
-  <title>React - Typescript Example</title>
-</head>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    {{template "header"}}
+    <title>React - Typescript Example</title>
+  </head>
 
-<body>
-  <div id='content' style="margin:auto; width:600px; margin-top:150px"></div>
-</body>
-
-<script src="/public/js/compiled/sample.js"></script>
+  <body>
+    <div id='content' style="margin:auto; width:600px; margin-top:150px"></div>
+  </body>
+  {{template "js"}}
 </html>
