depend on local-hosted stable version of libraries

--- a/views/js.htm
+++ b/views/js.htm
@@ -1,8 +1,8 @@
 {{define "js"}}
   <!-- Libraries -->
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.2/react.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.2/react-dom.js"></script>
+  <script src="/public/js/libs/jquery-3.1.0.min.js"></script>
+  <script src="/public/js/libs/react.min.js"></script>
+  <script src="/public/js/libs/react-dom.min.js"></script>
 
   <!-- Own -->
   <script src="/public/js/compiled/sample.js"></script>
